--- a/test/index.html
+++ b/test/index.html
@@ -8,9 +8,11 @@
   </head>
   <body>
     <div id="mocha"></div>
+    <script src="chai.js"></script>
     <script src="mocha.js"></script>
     <script>mocha.setup('bdd');</script>
-    <script src="tests.js"></script>
+    <script src="../calc.js"></script>
+    <script src="calc.test.js"></script>
     <script>
       mocha.run();
     </script>
